# romea-core-control

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README.md  package.xml  romea_control.repos  romea_control.rosinstall  romea_control_public.repos
cmake/: romea_controlConfig.cmake.in  romea_core_controlConfig.cmake.in
doc/: control_laws.md
include/romea_control/command/: FollowMe.hpp  FollowTrajectoryClassicSliding.hpp  FollowTrajectoryPredictiveSliding.hpp  KeepInterdistance.hpp
include/romea_control/observer/: SlidingObserverCinematic.hpp  SlidingObserverCinematicLinearTangent.hpp  SlidingObserverCinematicLyapounov.hpp  SpeedObserver.hpp  SpeedObserverRoland.hpp
include/romea_core_control/: CommandsData.hpp  FrontRearData.hpp  InertiaParameters.hpp  SpeedAngleData.hpp
include/romea_core_control/command/: FollowMe.hpp  FollowTrajectoryBackStepping.hpp  FollowTrajectoryClassicSliding.hpp  FollowTrajectoryDesbosGeneric.hpp  FollowTrajectoryDesbosGenericPredictive.hpp  FollowTrajectoryFrontRearDecoupled.hpp  FollowTrajectoryPredictiveSliding.hpp  FollowTrajectorySkidBackstepping.hpp  FollowTrajectorySkidSliding.hpp  KeepInterdistance.hpp
include/romea_core_control/observer/: SlidingObserverBacksteppingSkid.hpp  SlidingObserverCinematic.hpp  SlidingObserverCinematicLinearTangent.hpp  SlidingObserverCinematicLyapounov.hpp  SlidingObserverCinematicLyapunov.hpp  SlidingObserverPicardSkidBackstepping.hpp  SlidingObserverPicardSkidLyapunov.hpp  SpeedObserver.hpp  SpeedObserverMatt.hpp  SpeedObserverRoland.hpp
src/command/: FollowMe.cpp  FollowTrajectoryBackStepping.cpp  FollowTrajectoryClassicSliding.cpp  FollowTrajectoryDesbosGeneric.cpp  FollowTrajectoryDesbosGenericPredictive.cpp  FollowTrajectoryFrontRearDecoupled.cpp  FollowTrajectoryPredictiveSliding.cpp  FollowTrajectorySkidBackstepping.cpp  FollowTrajectorySkidSliding.cpp  KeepInterdistance.cpp
src/observer/: SlidingObserverBacksteppingSkid.cpp  SlidingObserverCinematic.cpp  SlidingObserverCinematicLinearTangent.cpp  SlidingObserverCinematicLyapounov.cpp  SlidingObserverCinematicLyapunov.cpp  SlidingObserverPicardSkidBackstepping.cpp  SlidingObserverPicardSkidLyapunov.cpp  SpeedObserver.cpp  SpeedObserverMatt.cpp  SpeedObserverRoland.cpp
test/: CMakeLists.txt  test_follow_base.hpp  test_follow_me_base.hpp  test_follow_me_skid_steering.cpp  test_follow_me_two_axle_steering.cpp  test_follow_trajectory_base.hpp  test_follow_trajectory_classic_sliding.cpp  test_follow_trajectory_predictive_sliding.cpp  test_follow_trajectory_skid_steering_sign.cpp  test_observer_cinematic_linear_tangent.cpp  test_observer_cinematic_lyapounov.cpp  test_observer_cinematic_lyapunov.cpp
test/data/: input_1ws.txt  output_cinematic_linear_tangent_1ws.txt  output_cinematic_lyapounov_1ws.txt  output_classic_sliding_1ws.txt  output_predictive_sliding_1ws.txt
